gccida/c3/store_by_pieces_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2915:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2916:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2918:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2921:36: error: redefinition of parameter 'rtx'
 struct rtx_def *(  *genfun)( rtx, rtx); // r13 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2921:31: error: a parameter list without types is only allowed in a function definition
 struct rtx_def *(  *genfun)( rtx, rtx); // r13 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2925:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2925:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2933:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2934:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2936:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2941:33: error: redefinition of parameter 'rtx'
 struct rtx_def *(  *v34)( rtx, rtx); // r13 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2941:28: error: a parameter list without types is only allowed in a function definition
 struct rtx_def *(  *v34)( rtx, rtx); // r13 
                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2945:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2945:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:2949:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // [rsp+4h] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:3065:41: error: redefinition of parameter 'rtx'
genfun = (  struct rtx_def *(  *)( rtx, rtx))insn_data_0[insn_code].genfun; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:3065:36: error: a parameter list without types is only allowed in a function definition
genfun = (  struct rtx_def *(  *)( rtx, rtx))insn_data_0[insn_code].genfun; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:3073:1: error: use of undeclared identifier 'v18'
v18 = adjust_automodify_address_1( to, v8, data->to_addr, data->offset, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/expr.c:3075:1: error: use of undeclared identifier 'v18'
v18 = adjust_address_1( to, v8, data->offset, 1, 1); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_by_pieces_1/src/obj/expr.o] Error 1
